--- a/reservation-template.html
+++ b/reservation-template.html
@@ -70,9 +70,6 @@
       <!-- ================================================= -->  
         <link rel="stylesheet" href="css/reservations.css"> 
       <!-- ================================================= -->
-
-
-      <!-- ================================================= -->
       <div id="reservation-header" style="background-image: url('images/seaturtlesnorkel-header.jpg');">
         <section>
           <h1>Snorkel with Sea Turtles<br><span>aboard the Aukai Catamaran</span></h1>
@@ -83,9 +80,8 @@
         </section>
       </div>
       <!-- ============ -->
-
       <hr class="border">
-
+      <!-- ============ -->
       <div id="reservation-details">
         <div id="reservations-article">
           <article>
@@ -110,16 +106,23 @@
           <img src="images/video-placeholder.png" alt="">
         </div>
       </div>
-
       <!-- ================================================= -->
       <div id="calendar-container">
         <script src="https://fareharbor.com/embeds/script/calendar/aquazonescuba/items/5080/?fallback=simple&full-items=yes&flow=51565"></script>
       </div>
       <!-- ================================================= -->
+      <div class="reservation-gallery">
+        <a href="images/private-charter.png" style="background-image: url('images/private-charter.png');"></a>
+        <a href="images/private-charter.png" style="background-image: url('images/private-charter.png');"></a>
+        <a href="images/private-charter.png" style="background-image: url('images/private-charter.png');"></a>
+        <a href="images/private-charter.png" style="background-image: url('images/private-charter.png');"></a>
+        <a href="images/private-charter.png" style="background-image: url('images/private-charter.png');"></a>
+        <a href="images/private-charter.png" style="background-image: url('images/private-charter.png');"></a>
+      </div>
       <div id="reservation-description">
         <h2>h2 text goes here</h2>
         <p>There is no place like this on Oahu. We come to this special site to watch the sea turtles gather to get their shells cleaned by the resident fish that live on the reef. Along with the sea turtles, there are abundant reef fish to see as well as
-          ​sting rays, octopus, moray eels. We guarantee you will see turtles! ​Whales &amp; dolphins are also encountered in season.</p>
+          sting rays, octopus, moray eels. We guarantee you will see turtles! Whales & dolphins are also encountered in season.</p>
       </div>
       <!-- ================================================= -->
       </main>  
